src/styles/styles.scss
body {
  background: #fff;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
}

h1 {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 600;
  font-size: 38px;
  line-height: 48px;
  color: #24292e;
  //24292e
}

h2 {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 500;
  color: #b9b9b9;
  font-size: 22px;
  line-height: 30px;
  text-align: justify;
}

h3 {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 18px;
  font-weight: 400;
}

h4 {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 600;
  font-size: 26px;
  margin-top: 40px;
  margin-bottom: 10px;
  color: #24292e;
}

h6 {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 16px;
  color: #fff;
}

p {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 20px;
  font-weight: 400;
  line-height: 36px;
  color: #3a3a3a;
  text-align: left;
}

a {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 600;
  color: #24292e;
  text-decoration: none;
  font-size: 1.2em;
  margin: 16px;
}

::selection {
  background: #ffe553;
}

.intext-link {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 20px;
  font-weight: 400;
  line-height: 36px;
  color: #3a3a3a;
  text-align: left;
  margin-right: 0px;
  margin-left: 0px;
  background: #ffe553;
}

.intext-link:hover {
  background: #ffd900;
}

.ctas-section {
  padding-top: 20px;
  display: flex;
}

.section {
  margin-bottom: 90px;
}

.section-title {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 600;
  font-size: 28px;
  color: #24292e;
  border-bottom: 9px solid rgb(255, 229, 83);
  width: fit-content;
  margin-bottom: 45px;
}

header {
  background: #ffffff;
  height: 60px;
  width: 100%;
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: 50;
  box-shadow: 0px 1px 0px 0px #dedee0;
  transition: all 0.4s ease-in-out;

  .container {
    width: 100%;
    height: 60px;
    position: fixed;
    top: 0px;
  }

  .semi-inner {
    margin: 20px auto;
    width: 86%;
    .inner-header {
      display: grid;
      grid-template-rows: 1fr;
      grid-template-columns: 1fr;
      .logo {
        width: fit-content;
        grid-row: 1;
        a {
          margin: 0px;
        }
      }
      .header-tranne-logo {
        width: fit-content;
        grid-row: 1;
        justify-self: end;
        align-self: center;
        display: flex;
      }
    }
  }
}

.page-content {
  margin-left: 0px;
  z-index: 6;
  display: grid;
  grid-template-columns: 1fr 302px 302px 1fr;
  transition: all 0.4s ease-out;
}
.main-text {
  grid-column: 2/4;
  margin-bottom: 40px;
  align-content: center;
  .my-photo {
    max-width: 100%;
    display: block;
    height: auto;
    margin: 0 auto;
  }
}

.cta-button {
  color: #24292e;
  font-size: 18px;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 600;
  padding: 10px;
  padding-left: 16px;
  padding-right: 16px;
  border: 3px solid #24292e;
  border-radius: 30px;
  transition: all 0.2s ease-in-out;
  display: block;
  height: auto;
  width: fit-content;
  margin: 0 auto;
}

.cta-button:hover {
  background: #ffe553;
  border-color: #ffe553;
  color: #24292e;
}

.footer-container {
  background: #0d0e1d;
  display: grid;
  grid-template-columns: 1fr 86% 1fr;
  grid-template-rows: 1fr;
  align-items: center;

  .copyrights {
    grid-column: 2;
    grid-row: 1;
    color: #fff;
    font-size: 17px;
    padding-top: 16px;
    line-height: 30px;
    padding-bottom: 18px;
    width: fit-content;
    margin-left: 0;
  }

  .copyrights-link {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    font-size: 17px;
    font-weight: 400;
    color: #fff;
    text-decoration: none;

    margin-left: 0;
  }

  .elementi-footer {
    grid-column: 2;
    grid-row: 1;
    justify-self: end;
    padding-top: 16px;
    padding-bottom: 18px;
  }

  .footer-icons {
    font-size: 17px;
    margin: 17px;
    margin-top: 10px;
    padding-left: 16px;
  }
}

.post-container {
  margin-top: -24px;
  margin-bottom: 58px;
}

.post-title {
  margin-bottom: -12px;
  text-align: left;
  line-height: 44px;
}

.post-description {
  line-height: 30px;
  text-align: left;
  margin-bottom: 14px;
}

.post-image {
  max-width: 100%;
  display: block;
  height: auto;
  margin: 0 auto;
}

.read-more {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 36px;
  color: #3a3a3a;
  text-align: left;
  margin-right: 0px;
  margin-left: 0px;
}

@media (max-width: 760px) {
  #elementi-menu {
    display: none;
  }
}

@media screen and (max-width: 760px) {
  .page-content {
    display: grid;
    grid-template-columns: 7% 43% 43% 7%;
  }
  .main-text {
    grid-column: 2/4;
  }
  .footer-container {
    display: grid;
    grid-template-columns: 1fr 86% 1fr;
    grid-template-rows: 1fr 1fr;
    .elementi-footer {
      grid-column: 2;
      grid-row: 2;
      justify-self: center;
    }
    .footer-icons {
      margin: 8px;
    }
    a {
      margin-left: 3px;
      margin-right: 3px;
      padding: 0px;
    }
  }
}

